--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-fastapi
-uvicorn[standard]
-requests
-gunicorn
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+gunicorn==21.2.0
+requests==2.31.0
+urllib3==2.2.1
